# Universal-Json-Plugin-Loader

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
api/: Cargo.toml  README.md  build.rs
api/src/: cbindings.rs  lib.rs  misc.rs
api/src/capi/: ft_string.c
api/src/capi/header/: ft_api.h  ft_endpoint.h  ft_event.h  ft_include.h  ft_list.h  ft_rustbindings.h  ft_string.h  ft_types.h  ft_util.h
api/src/safe_api/: misc.rs  mod.rs  pointer_traits.rs
core/: Cargo.toml  LICENSE  README.md
core/endpoint/: config-args.json  config-resp.json  power-args.json  power-resp.json
core/event/: endpoint.json  event.json  init.json  power.json
core/src/: config.rs  governor.rs  launcher.rs  loader.rs  main.rs  runtime.rs  util.rs
core/src/config/: cli.rs  mod.rs
core/src/runtime/: endpoint.rs  event.rs  mod.rs
example/: Cargo.toml  README.md
example/src/: lib.rs
finance-together-api/: Cargo.toml  build.rs
finance-together-api/src/capi/: cbindings.rs  ft_string.c  mod.rs
finance-together-api/src/capi/header/: ft_api.h  ft_include.h  ft_rustbindings.h  ft_string.h  ft_types.h
proc-macros/: Cargo.toml  README.md
proc-macros/src/: lib.rs
src/: loader.rs
trait_fn/: Cargo.toml
trait_fn/src/: lib.rs
