[workspace]
resolver = "3"
members = ["core", "api", "example", "proc-macros"]

[workspace.lints.clippy]
pedantic = {level = "warn", priority = -1}
restriction = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}
cargo = {level = "warn", priority = -1}

mod_module_files = "allow"
implicit_return = "allow"
pattern_type_mismatch = "allow"
missing_docs_in_private_items = "allow"
question_mark_used = "allow"
missing_trait_methods = "allow"