[workspace]
resolver = "3"
members = ["core", "api", "example", "proc-macros"]

[workspace.lints.rust]
nonstandard-style = "warn"
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
all = {level = "warn", priority = -1}
pedantic = {level = "warn", priority = -1}
restriction = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}
cargo = {level = "warn", priority = -1}

blanket_clippy_restriction_lints = "allow"

mod_module_files = "allow"
implicit_return = "allow"
pattern_type_mismatch = "allow"
missing_docs_in_private_items = "allow"
question_mark_used = "allow"
missing_trait_methods = "allow"
pub_use = "allow"
unreachable = "allow"
unseparated_literal_suffix = "allow"
pub_with_shorthand = "allow"
arithmetic_side_effects = "allow"
semicolon_outside_block = "allow"

cargo_common_metadata = "allow"

#temporary fix for schema files being detected by clippy
self_named_module_files = "allow"