[package]
name = "finance-together-api"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
derive_more = { version = "2.0.1", features = ["display"] }
derive-enum-from-into = "0.2.1"
uuid = { version = "1.18.1", optional = true }
trait_fn = { path = "../trait_fn", optional = true }
cli-colors = "1.0.0"

[build-dependencies]
bindgen_helpers = "0.5.1"
cbindgen = "0.29.2"
cc = "1.2.45"

[lib]
crate-type = ["staticlib", "lib"]

[features]
default = []
unsafe = []
safe = ["dep:uuid", "dep:trait_fn"]

[lints.clippy]
pedantic = "warn"

