[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["derive"] }
uuid = "1.18.1"
atomic_enum = "0.3.0"
arc-swap = "1.7.1"
finance-together-api = { path = "../api", features = ["safe"] }


[lib]
crate-type = ["dylib"]
